# dotignore

./: .dockerignore  .ignore  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  docker-compose.yml  index.md
.github/workflows/: build-plugin.yml  build.yml  ci.yml  release.yml
_layouts/: default.html
assets/css/: custom.css  main.css
docs/: index.md
docs/en/: index.md
docs/en/cli/: index.md
docs/en/converter/: converter.md
docs/en/format/: dotignore-format.md  index.md  specification.md
docs/en/integration/: converter.md  index.md  validator.md
docs/es/: README.md  index.md
docs/es/cli/: index.md
docs/es/converter/: converter.md
docs/es/format/: dotignore-format.md
docs/es/formato/: especificacion.md  index.md
docs/es/integracion/: conversor.md  index.md  validador.md
es/: index.md
samples/: converted.git.ignore  converted.svn.ignore  sample.gitignore  sample.svnignore
src/: lib.rs  main.rs
src/converter/: convert_ignore.rs
src/ignore/: converter.rs  mod.rs  parser.rs
temp_build/: Cargo.toml  Dockerfile
temp_build/src/: lib.rs  main.rs
temp_build/src/converter/: mod.rs
temp_build/src/ignore/: converter.rs  mod.rs  parser.rs  pattern.rs
test/emptyfolder/: .emptyfile
tests/: mod.rs
tests/integration/: complete_workflow_tests.rs  mod.rs
tests/size_patterns/: test_size_patterns.rs
tests/unit/: group_tests.rs  ignore_file_tests.rs  ignore_tests.rs  mod.rs  pattern_tests.rs
